--- a/mise.toml
+++ b/mise.toml
@@ -10,6 +10,7 @@
   "cargo:taplo-cli"    = "0.10.0"
   python               = "3.13"
   uv                   = "0.8.15"
+  "github:OSGeo/gdal"  = "latest"
 
 [env]
   # Project environment variables
