--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
   description     = "Add your description here"
   readme          = "README.md"
   requires-python = ">=3.13"
-  dependencies    = ["GDAL"]
+  dependencies    = ["GDAL==3.4.1"]
 
 [dependency-groups]
 
