--- a/.github/actions/setup-python/action.yaml
+++ b/.github/actions/setup-python/action.yaml
@@ -7,7 +7,7 @@ runs:
     - name: Install GDAL system dependencies
       uses: awalsh128/cache-apt-pkgs-action@2c09a5e66da6c8016428a2172bd76e5e4f14bb17 # v1.5.3
       with:
-        packages: gdal-bin=3.4.1 libgdal-dev=3.4.1
+        packages: gdal-bin libgdal-dev
         version: 1.0
 
     - name: Install python and uv
