--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@
     "httpx==0.28.1",
     "structlog>=25.4.0",
     "pandas==2.3.2",
+    "matplotlib>=3.7.0",
+    "contextily>=1.4.0",
   ]
 
 [dependency-groups]
@@ -20,6 +22,7 @@
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
     "pytest-profiling>=1.8.1",
+    "syrupy>=4.9.1",
 
     # linting and formatting
     "pyright>=1.1.403",
