--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@
     "pytest-cov>=6.2.1",
     "pytest-profiling>=1.8.1",
     "syrupy>=4.9.1",
+    "xyzservices>=2025.4.0",
 
     # linting and formatting
     "pyright>=1.1.403",
@@ -34,6 +35,7 @@
 
     # logging
     "rich>=14.1.0",
+
   ]
 
   [project.scripts]
