--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
         with:
           install: true
           cache: true
-          install_args: "\"cargo:taplo-cli\""
+          install_args: "\"cargo:taplo-cli\" \"npm:@infisical/cli\""
 
       - name: Run linters
         run: |
