--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,38 +3,37 @@
   version = "0.1.0"
   description = "Add your description here"
   readme = "README.md"
-  requires-python = ">=3.13"
+  requires-python = "==3.13.7"
   dependencies = [
     "geopandas==1.1.1",
     "httpx==0.28.1",
-    "structlog>=25.4.0",
+    "structlog==25.4.0",
     "pandas==2.3.2",
-    "matplotlib>=3.7.0",
-    "contextily>=1.4.0",
-    "folium>=0.14.0",
+    "matplotlib==3.10.6",
+    "contextily==1.4.0",
+    "folium==0.14.0",
   ]
 
 [dependency-groups]
 
   dev = [
     # testing
-    "pytest>=8.4.1",
-    "pytest-asyncio>=1.1.0",
-    "pytest-cov>=6.2.1",
-    "pytest-profiling>=1.8.1",
-    "syrupy>=4.9.1",
-    "xyzservices>=2025.4.0",
+    "pytest==8.4.1",
+    "pytest-asyncio==1.1.0",
+    "pytest-cov==6.2.1",
+    "pytest-profiling==1.8.1",
+    "syrupy==4.9.1",
+    "xyzservices==2025.4.0",
 
     # linting and formatting
-    "pyright>=1.1.403",
-    "ruff>=0.12.9",
-    "types-pyyaml>=6.0.12.20250809",
-    "ssort>=0.15.0",
-    "ty>=0.0.1a20",
+    "pyright==1.1.403",
+    "ruff==0.12.9",
+    "types-pyyaml==6.0.12.20250809",
+    "ssort==0.15.0",
+    "ty==0.0.1a20",
 
     # logging
-    "rich>=14.1.0",
-
+    "rich==14.1.0",
   ]
 
   [project.scripts]
