--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@
     "matplotlib==3.10.6",
     "contextily==1.6.2",
     "folium==0.20.0",
+    "manim==0.19.0",
+    "numpy==2.3.3",
+    "Pillow==11.3.0",
+    "requests==2.32.5",
   ]
 
 [dependency-groups]
